src/test/ui/gated-bad-feature.stderr
error[E0556]: malformed feature, expected just one word
  --> $DIR/gated-bad-feature.rs:13:5
   |
LL |     foo(bar),
   |     ^^^^^^^^

error[E0556]: malformed feature, expected just one word
  --> $DIR/gated-bad-feature.rs:14:5
   |
LL |     foo = "baz"
   |     ^^^^^^^^^^^

error[E0555]: malformed feature attribute, expected #![feature(...)]
  --> $DIR/gated-bad-feature.rs:19:1
   |
LL | #![feature] //~ ERROR: malformed feature
   | ^^^^^^^^^^^

error[E0555]: malformed feature attribute, expected #![feature(...)]
  --> $DIR/gated-bad-feature.rs:20:1
   |
LL | #![feature = "foo"] //~ ERROR: malformed feature
   | ^^^^^^^^^^^^^^^^^^^

error[E0557]: feature has been removed
  --> $DIR/gated-bad-feature.rs:22:12
   |
LL | #![feature(test_removed_feature)] //~ ERROR: feature has been removed
   |            ^^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `gated_bad_feature`
   |
   = note: consider adding a `main` function to `$DIR/gated-bad-feature.rs`

error: aborting due to 6 previous errors

Some errors occurred: E0555, E0556, E0557, E0601.
For more information about an error, try `rustc --explain E0555`.
